[package]
name = "author-ext-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-api = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = ["codec/std", "sp-api/std", "sp-std/std", "scale-info/std"]
