[package]
name = "author-ext-rpc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
author-ext-api = { version = "0.1", path = "../author-ext-api" }
bioauth-keys = { version = "0.1", path = "../bioauth-keys" }
rpc-deny-unsafe = { path = "../rpc-deny-unsafe" }

jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
sc-transaction-pool-api = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.36" }
sp-api = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.36" }
sp-blockchain = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.36" }
sp-core = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.36" }
tracing = "0.1"
