[package]
name = "author-ext-rpc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
author-ext-api = { path = "../author-ext-api" }
bioauth-keys = { path = "../bioauth-keys" }
rpc-deny-unsafe = { path = "../rpc-deny-unsafe" }
rpc-error-response = { path = "../rpc-error-response" }
rpc-validator-key-logic = { path = "../rpc-validator-key-logic" }

jsonrpsee = { workspace = true, features = ["server", "macros"] }
sc-transaction-pool-api = { workspace = true }
serde = { workspace = true, features = ["default"] }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
