[package]
name = "bioauth-consensus-api"
version = "0.1.0"
edition = "2018"
authors = ["Humanode Team <core@humanode.io>"]
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false }
sp-api = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-std = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "master" }

[features]
default = ["std"]
std = ["codec/std", "sp-api/std", "sp-std/std"]
