[package]
name = "bioauth-consensus-api"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false }
sp-api = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update" }
sp-std = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update" }

[features]
default = ["std"]
std = ["codec/std", "sp-api/std", "sp-std/std"]
