[package]
name = "bioauth-consensus"
version = "0.1.0"
edition = "2018"
authors = ["Humanode Team <core@humanode.io>"]
publish = false

[dependencies]
humanode-runtime = { version = "0.1", path = "../humanode-runtime" }
pallet-bioauth = { version = "0.1", path = "../pallet-bioauth" }

async-trait = "0.1.42"
pallet-aura = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
sc-client-api = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
sc-consensus = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
sc-tracing = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
sp-api = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
sp-application-crypto = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
sp-blockchain = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
sp-consensus = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
sp-consensus-aura = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
sp-consensus-slots = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
thiserror = "1"

[dev-dependencies]
mockall = "0.10"
node-primitives = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
sc-service = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
sp-core = { git = "https://github.com/humanode-network/substrate", branch = "aura-hack" }
tokio = { version = "1", features = ["full"] }

[features]
