[package]
name = "bioauth-consensus"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
bioauth-consensus-api = { version = "0.1", path = "../bioauth-consensus-api", optional = true }

async-trait = "0.1.42"
codec = { package = "parity-scale-codec", version = "2", default-features = false, optional = true }
futures = "0.3"
sc-client-api = { git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update" }
sc-consensus = { git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update" }
sp-api = { git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update" }
sp-application-crypto = { git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update", optional = true }
sp-blockchain = { git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update" }
sp-consensus = { git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update" }
sp-consensus-aura = { git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update", optional = true }
sp-keystore = { git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update", optional = true }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update" }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
mockall = "0.10"
node-primitives = { git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update" }
sc-service = { git = "https://github.com/humanode-network/substrate", branch = "hmnd-substrate-update" }
tokio = { version = "1", features = ["full"] }

[features]
default = []
all = ["aura-integration", "keystore-integration", "api-integration"]
aura-integration = ["sp-consensus-aura", "sp-application-crypto"]
keystore-integration = ["sp-keystore", "sp-application-crypto"]
api-integration = ["bioauth-consensus-api", "codec"]
