[package]
name = "bioauth-flow-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
sp-api = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.36" }
sp-std = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.36" }

[features]
default = ["std"]
std = ["codec/std", "sp-api/std", "sp-std/std", "scale-info/std"]
