[package]
name = "bioauth-flow-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
codec = { workspace = true, package = "parity-scale-codec", default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-api = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = ["std"]
std = ["codec/std", "sp-api/std", "sp-std/std", "scale-info/std"]
