[package]
name = "bioauth-flow-rpc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bioauth-flow-api = { version = "0.1", path = "../bioauth-flow-api" }
bioauth-keys = { version = "0.1", path = "../bioauth-keys" }
pallet-bioauth = { version = "0.1", path = "../pallet-bioauth" }
primitives-liveness-data = { version = "0.1", path = "../primitives-liveness-data" }
robonode-client = { version = "0.1", path = "../robonode-client" }
rpc-deny-unsafe = { path = "../rpc-deny-unsafe" }

anyhow = "1"
async-trait = "0.1"
jsonrpsee = { version = "0.13.0", features = ["server", "macros"] }
sc-transaction-pool-api = { git = "https://github.com/humanode-network/substrate", branch = "master" }
serde = "1"
serde_json = "1"
sp-api = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "master" }
tokio = "1"
tracing = "0.1"
