[package]
name = "bioauth-flow-rpc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bioauth-flow-api = { path = "../bioauth-flow-api" }
bioauth-keys = { path = "../bioauth-keys" }
pallet-bioauth = { path = "../pallet-bioauth" }
primitives-liveness-data = { path = "../primitives-liveness-data" }
robonode-client = { path = "../robonode-client" }
rpc-deny-unsafe = { path = "../rpc-deny-unsafe" }
rpc-error-response = { path = "../rpc-error-response" }
rpc-validator-key-logic = { path = "../rpc-validator-key-logic" }

async-trait = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
sc-transaction-pool-api = { workspace = true }
serde = { workspace = true, features = ["default"] }
serde_json = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
