[package]
name = "bioauth-flow"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
humanode-runtime = { version = "0.1", path = "../humanode-runtime" }
pallet-bioauth = { version = "0.1", path = "../pallet-bioauth" }
primitives-liveness-data = { version = "0.1", path = "../primitives-liveness-data" }
robonode-client = { version = "0.1", path = "../robonode-client" }

sc-client-api = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "master" }

anyhow = "1"
async-trait = "0.1"
futures = { version = "0.3", features = ["compat", "bilock", "unstable"] }
jsonrpc-core = "18"
jsonrpc-core-client = "18"
jsonrpc-derive = "18"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = "1"
tracing = "0.1"
