[package]
name = "bioauth-flow"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bioauth-consensus = { version = "0.1", path = "../bioauth-consensus" }
bioauth-flow-api = { version = "0.1", path = "../bioauth-flow-api" }
pallet-bioauth = { version = "0.1", path = "../pallet-bioauth" }
primitives-liveness-data = { version = "0.1", path = "../primitives-liveness-data" }
robonode-client = { version = "0.1", path = "../robonode-client" }
rotate-keys-api = { version = "0.1", path = "../rotate-keys-api" }

anyhow = "1"
async-trait = "0.1"
futures = { version = "0.3", features = ["compat", "bilock", "unstable"] }
jsonrpc-core = "18"
jsonrpc-core-client = "18"
jsonrpc-derive = "18"
sc-transaction-pool-api = { git = "https://github.com/humanode-network/substrate", branch = "master" }
serde = "1"
serde_json = "1"
sp-api = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "master" }
tokio = "1"
tracing = "0.1"
