[package]
name = "bioauth-id"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-application-crypto = { git = "https://github.com/humanode-network/substrate", branch = "master" }
