[package]
name = "bioauth-keys"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp-application-crypto = { git = "https://github.com/humanode-network/substrate", branch = "polkadot-v0.9.36" }
sp-keystore = { git = "https://github.com/humanode-network/substrate", branch = "polkadot-v0.9.36" }
thiserror = "1"

[features]
default = []
