[package]
name = "chain-properties-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp-api = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-std = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "master" }

[features]
default = ["std"]
std = ["sp-api/std", "sp-std/std"]
