[package]
name = "crypto-utils-evm"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bip32 = "0.5"
libsecp256k1 = "0.7"
sha3 = "0.10"
tiny-bip39 = "1.0"

sp-core = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }

[dev-dependencies]
hex-literal = "0.4"
