[package]
name = "crypto-utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
frame-support = { git = "https://github.com/humanode-network/substrate", branch = "locked/humanode-2022-11-23" }
pallet-im-online = { git = "https://github.com/humanode-network/substrate", branch = "locked/humanode-2022-11-23" }
sp-consensus-babe = { git = "https://github.com/humanode-network/substrate", branch = "locked/humanode-2022-11-23" }
sp-finality-grandpa = { git = "https://github.com/humanode-network/substrate", branch = "locked/humanode-2022-11-23" }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "locked/humanode-2022-11-23" }
