[package]
name = "crypto-utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pallet-im-online = { git = "https://github.com/humanode-network/substrate", branch = "polkadot-v0.9.36" }
sp-consensus-babe = { git = "https://github.com/humanode-network/substrate", branch = "polkadot-v0.9.36" }
sp-finality-grandpa = { git = "https://github.com/humanode-network/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/humanode-network/substrate", branch = "polkadot-v0.9.36" }
