[package]
name = "eip191-common"
version = "0.1.0"
edition = "2021"

[dependencies]
primitives-ethereum = { version = "0.1", path = "../primitives-ethereum", default-features = false }

sp-core-hashing-proc-macro = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "locked/humanode-2022-09-21" }
sp-io = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "locked/humanode-2022-09-21" }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"

[features]
default = ["std"]
std = ["primitives-ethereum/std", "sp-io/std"]
