[package]
name = "eip191-crypto"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
primitives-ethereum = { path = "../primitives-ethereum", default-features = false }

numtoa = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
hex = { workspace = true }

[features]
default = ["std"]
std = ["hex/std", "primitives-ethereum/std", "sp-io/std", "sp-std/std"]
