[package]
name = "eip191-token-claim"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hex = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
eip191-crypto = { path = "../eip191-crypto" }
primitives-ethereum = { path = "../primitives-ethereum" }

hex-literal = { workspace = true }

[features]
default = ["std"]
std = ["hex/std", "sp-std/std"]
