[package]
name = "eip712-account-claim"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-core-hashing-proc-macro = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-io = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "master" }

[dev-dependencies]
eth-eip-712 = { package = "eip-712", version = "=0.1.0" }
hex-literal = "0.3"
libsecp256k1 = "0.7"
serde_json = "1"
sp-core = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "master" }

[features]
default = ["std"]
std = ["sp-core/std", "sp-io/std"]
