[package]
name = "eip712-account-claim"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-core = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-core-hashing-proc-macro = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "master" }
sp-io = { default-features = false, git = "https://github.com/humanode-network/substrate", branch = "master" }

[dev-dependencies]
eth-eip-712 = { package = "eip-712", version = "=0.1.0" }
hex-literal = "0.3"
serde_json = "1"

[features]
default = ["std"]
std = ["frame-support/std", "sp-core/std", "sp-io/std"]
