[package]
name = "eip712-account-claim"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eip712-common = { version = "0.1", path = "../eip712-common", default-features = false }

[dev-dependencies]
eip712-common-test-utils = { version = "0.1", path = "../eip712-common-test-utils" }

hex-literal = "0.4"

[features]
default = ["std"]
std = ["eip712-common/std"]
