[package]
name = "eip712-common-test-utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eip712-common = { version = "0.1", path = "../eip712-common" }
primitives-ethereum = { version = "0.1", path = "../primitives-ethereum" }

ethers = "2.0"
hex-literal = "0.3"
secp256k1 = { version = "0.27" }
serde_json = { version = "1" }
sp-core = { git = "https://github.com/humanode-network/substrate", branch = "locked/polkadot-v0.9.38" }
