[package]
name = "eip712-common-test-utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eip712-common = { path = "../eip712-common" }
primitives-ethereum = { path = "../primitives-ethereum" }

ethers-core = { workspace = true, features = ["eip712"] }
secp256k1 = { workspace = true, features = ["default"] }
serde_json = { workspace = true }
sp-core = { workspace = true }
