[package]
name = "eip712-common"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
primitives-ethereum = { path = "../primitives-ethereum", default-features = false }

sp-core-hashing-proc-macro = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[dev-dependencies]
hex-literal = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = ["primitives-ethereum/std", "sp-io/std", "sp-std/std"]
