[package]
name = "eip712-token-claim"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eip712-common = { path = "../eip712-common", default-features = false }

[dev-dependencies]
eip712-common-test-utils = { path = "../eip712-common-test-utils" }

hex-literal = { workspace = true }

[features]
default = ["std"]
std = ["eip712-common/std"]
