[package]
name = "evm-nonces-recovery"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pallet-evm-system = { path = "../pallet-evm-system", default-features = false }

codec = { workspace = true }
frame-support = { workspace = true }
rlp = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "rlp/std",
  "pallet-evm-system/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "pallet-evm-system/try-runtime",
  "sp-runtime/try-runtime",
]
