[package]
name = "evm-tracing-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
codec = { workspace = true }
hex = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
