[package]
name = "evm-tracing-rpc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
evm-tracing-client = { path = "../evm-tracing-client" }

ethereum = { workspace = true }
fc-rpc = { workspace = true }
fc-rpc-core = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
sc-utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sp-core = { workspace = true, features = ["std"] }
tokio = { workspace = true }
